Bug 424430 - Loaded breakpoints don't show up in UI
Summary: Loaded breakpoints don't show up in UI
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: UI: general (other bugs)
Version First Reported In: 5.5.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-19 16:33 UTC by Axel Kellermann
Modified: 2020-08-16 19:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Axel Kellermann 2020-07-19 16:33:22 UTC
SUMMARY
Loaded breakpoints don't show up in the UI.

STEPS TO REPRODUCE
1. Open project
2. Set breakpoints
3. Close project
4. Load project again

OBSERVED RESULT
UI does not show breakpoint markers in the text editor view, but breakpoints are correctly shown in the Breakpoints Toolview.

EXPECTED RESULT
UI shows breakpoint markers.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Archlinux
KDE Plasma Version: 5.19.3
KDE Frameworks Version: 5.72.0
Qt Version: 5.15.0

ADDITIONAL INFORMATION
I have a fix for that locally, I'll send it in for review the coming days.
Comment 1 Axel Kellermann 2020-07-19 17:11:59 UTC
See https://invent.kde.org/kdevelop/kdevelop/-/merge_requests/147
Comment 2 Igor Kushnir 2020-08-16 19:46:02 UTC
Git commit cc3f98b89f30a2501fdb1d848714b9b3eedd0c85 by Igor Kushnir, on behalf of Axel Kellermann.
Committed on 16/08/2020 at 19:41.
Pushed by igorkushnir into branch '5.6'.

Make sure DebugController is initialized before UI is shown

DebugController is responsible for loading breakpoints, and if they are
not loaded when the UI is made visible, they don't show up.
FIXED-IN: 5.6.0

M  +5    -1    kdevplatform/shell/core.cpp

https://invent.kde.org/kdevelop/kdevelop/commit/cc3f98b89f30a2501fdb1d848714b9b3eedd0c85