Make sure DebugController is initialized before UI is shown

DebugController is responsible for loading breakpoints, and if they are
not loaded when the UI is made visible, they don't show up.

BUG: 424430
FIXED-IN: 5.6.0